K8's_Objects/code/NameSpace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hotel-app
  labels:
    name: hotel-app
