K8's_Objects/code/BackendDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: hotel-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:

      # 🔹 initContainer يستنى MySQL
      containers:
      - name: backend
        image: abdel3ziz/simple-backend:1
        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi

      tolerations:
      - key: "type"
        operator: "Equal"
        value: "db-backend"
        effect: "NoSchedule"

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: "node-type"
                operator: In
                values:
                - backend-db
