K8's_Objects/code/FrontendDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: hotel-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      tolerations:
      - key: "type"
        operator: "Equal"
        value: "db-backend"   # ✅ نفس قيمة الـ taint
        effect: "NoSchedule"

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: "node-type"
                operator: NotIn
                values:
                - backend-db

      containers:
      - name: frontend
        image: abdel3ziz/hotel-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
