K8's_Objects/code/BackendService.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: hotel-app
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
