K8's_Objects/code/FrontendService.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: hotel-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
